--- a/app/src/main/res/layout/dialog_add_file.xml
+++ b/app/src/main/res/layout/dialog_add_file.xml
@@ -2,16 +2,17 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_margin="20dp"
     android:padding="20dp"
-    android:layout_margin="20dp">
+    android:id="@+id/dialogAddFile"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/dialogBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/red_round"
+        android:background="@drawable/white_box"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
@@ -20,57 +21,74 @@
             android:layout_height="wrap_content"
             android:text="Dodaj plik"
             android:textSize="17sp"
-            android:textColor="@android:color/white"
+            android:textColor="@color/white"
             android:padding="10dp"
+            android:background="@drawable/red_round"
             android:drawableLeft="@drawable/baseline_insert_drive_file_24"
             android:drawablePadding="8dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 
+        <EditText
+            android:id="@+id/noteEditText"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="20dp"
+            android:hint="Dodaj notatkę (opcjonalnie)"
+            android:textColor="@color/appred"
+            android:textColorHint="@color/appred"
+            android:backgroundTint="@color/appred"
+            app:layout_constraintTop_toBottomOf="@id/addFileTitle"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+        <Spinner
+            android:id="@+id/fileTypeSpinner"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="20dp"
+            app:layout_constraintTop_toBottomOf="@id/noteEditText"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:entries="@array/file_types" />
+
+        <Button
+            android:id="@+id/btnSelectFile"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:text="Wybierz plik"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="20dp"
+            android:backgroundTint="@color/appred"
+            android:textColor="@color/white"
+            android:textSize="14sp"
+            app:cornerRadius="20dp"
+            app:layout_constraintTop_toBottomOf="@id/fileTypeSpinner"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+        <Button
+            android:id="@+id/btnSaveFile"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:text="Zapisz plik"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="20dp"
+            android:backgroundTint="@color/appred"
+            android:textColor="@color/white"
+            android:textSize="14sp"
+            app:cornerRadius="20dp"
+            app:layout_constraintTop_toBottomOf="@id/btnSelectFile"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <EditText
-        android:id="@+id/noteEditText"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:hint="Dodaj notatkę (opcjonalnie)"
-        android:textColor="@color/appred"
-        android:textColorHint="@color/appred"
-        android:backgroundTint="@color/appred"
-        app:layout_constraintTop_toBottomOf="@id/dialogBox"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-    <Spinner
-        android:id="@+id/fileTypeSpinner"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/noteEditText"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:entries="@array/file_types" />
-
-    <Button
-        android:id="@+id/btnSelectFile"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Wybierz plik"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/fileTypeSpinner"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-    <Button
-        android:id="@+id/btnSaveFile"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Zapisz plik"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/btnSelectFile"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
